--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="asset/css/style.css">
+    <script src="./asset/thirdpart/sprintf.js"></script>
     <title>BeatMaker</title>
 </head>
 <body>
@@ -128,7 +129,14 @@
             <input type="range" class="tempo-slider" max="300" min="20" value="150">
             <p>Speed: <span class="tempo-nr">150</span></p>
         </div>
-        <button class="play">Play</button>
+        <div>
+            <button class="play">Play</button>
+            <button class="power" onclick="onPower()">Power</button>
+            <button class="start" onclick="onRecord()">Start</button>
+            <button class="stop" onclick="onStop()">Stop</button>
+            <button class="download"><a id="DownloadLink" download="recorded.mp3">Download</a></button>
+        </div>
+        
     </div>
 
     <audio class="kick-sound" src="sound/kick-classic.wav" ></audio>
